[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/UI/ChatBox.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/CommandManager.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="ChatBox" type="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -160.0
margin_right = 310.0
rect_min_size = Vector2( 250, 100 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.301961, 0.286275, 0.286275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 305.0
margin_bottom = 155.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 122.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
color = Color( 0.172549, 0.164706, 0.196078, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ColorRect/HBoxContainer"]
margin_top = 5.0
margin_right = 61.0
margin_bottom = 19.0
text = "[Whisper]"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/ColorRect/HBoxContainer"]
margin_left = 65.0
margin_right = 297.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
max_length = 240
caret_blink = true

[node name="CommandManager" type="Node" parent="."]
script = ExtResource( 2 )

[connection signal="focus_entered" from="MarginContainer/VBoxContainer/ColorRect/HBoxContainer/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/ColorRect/HBoxContainer/LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_entered" from="MarginContainer/VBoxContainer/ColorRect/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="command_msg_logged" from="CommandManager" to="." method="_on_CommandManager_command_msg_logged"]
[connection signal="error_msg_logged" from="CommandManager" to="." method="_on_CommandManager_error_msg_logged"]
